manifest/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 5000
  selector:
    app: flask
