manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: dns-01-production
spec:
  ingressClassName: ingress-nginx
  rules:
    - host: flaskingress.abdelalitraining.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: flask-app
                port:
                  number: 8080
  tls:
    - hosts:
        - flaskingress.abdelalitraining.com
      secretName: flaskingress-abdelalitraining-com
